--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,3 @@
-@import './base.scss';
-@import './fonts.scss';
-@import './input.scss';
+@use './base.scss' as *;
+@use './fonts.scss' as *;
+@use './input.scss' as *;
