--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @use './base.scss' as *;
 @use './fonts.scss' as *;
 @use './input.scss' as *;
+@use './awesome.scss' as *;
 @use './icons.scss' as *;
