--- a/src/styles/awesome.scss
+++ b/src/styles/awesome.scss
@@ -4,8 +4,8 @@
   src:
       url('./awesome/fontawesome-webfont.eot?#iefix&v=3.1.0') format('embedded-opentype'),
       url('./awesome/fontawesome-webfont.woff?v=3.1.0') format('woff'),
-      url('./awesome/fontawesome-webfont.ttf?v=3.1.0') format('truetype'),
-      url('./awesome/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
+      url('./awesome/fontawesome-webfont.ttf?v=3.1.0') format('truetype');
+//      url('./awesome/fontawesome-webfont.svg#fontawesomeregular?v=3.1.0') format('svg');
   font-weight: normal;
   font-style: normal;
 }
