--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -3,4 +3,5 @@
 @use './input.scss' as *;
 @use './awesome.scss' as *;
 @use './icons.scss' as *;
-@use './paginator.scss' as *;
+@use './button.scss' as *;
+@use './pager.scss' as *;
