--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,14 +1,3 @@
-.slick-pager {
-    display: flex;
-    align-items: center;
-    grid-gap: 0.5em;
-    vertical-align: middle;
-
-    .slick-pager-nav {
-        display: inline-block;
-    }
-}
-
 .btn {
     display: inline-block;
     padding: 4px 12px;
@@ -39,6 +28,15 @@
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
+
+    &.disabled, &[disabled] {
+        cursor: default;
+        opacity: 0.65;
+        filter: alpha(opacity = 65);
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
 }
 
 .btn-group {
