--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,3 +1,5 @@
+/* base.bundle.css */
+
 input {
     font-size: 14px;
     font-weight: normal;
@@ -30,6 +32,31 @@ input {
             background-size: 23px;
             margin-top: -5px;
             margin-left: -5px;
+        }
+    }
+
+    &[type="radio"] {
+        width: auto;
+        margin: 4px 0 0;
+        line-height: normal;
+        cursor: pointer;
+        vertical-align: middle;
+        appearance: auto;
+        box-sizing: border-box;
+
+        &:before {box-sizing: border-box;
+            content: '';
+            background: url(./img/rbutton-empty.svg) 0 no-repeat;
+            background-size: 18px;
+            margin-top: -2px;
+            margin-left: -3px;
+            position: absolute;
+            width: 20px;
+            height: 20px;
+        }
+
+        &:checked:before {
+            background: url(./img/rbutton1.svg) 0 no-repeat;
         }
     }
 }
