--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,4 +1,4 @@
-/* base.bundle.css */
+/* from base.bundle.css */
 
 input {
     font-size: 14px;
@@ -31,7 +31,7 @@ input {
             background-image: url(./img/check.png);
             background-size: 23px;
             margin-top: -5px;
-            margin-left: -5px;
+            margin-left: -4px;
         }
     }
 
@@ -48,7 +48,7 @@ input {
             content: '';
             background: url(./img/rbutton-empty.svg) 0 no-repeat;
             background-size: 18px;
-            margin-top: -2px;
+            margin-top: -4px;
             margin-left: -3px;
             position: absolute;
             width: 20px;
