--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -4,6 +4,8 @@ input {
     font-size: 14px;
     font-weight: normal;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    position: relative;
+    border: none !important;
 
     &[type="checkbox"] {
         width: auto;
@@ -20,9 +22,9 @@ input {
             background-size: 19px;
             background-repeat: no-repeat;
             background-position: center;
-            margin-top: -3px;
-            margin-left: -3px;
             position: absolute;
+            left: 1px;
+            top: 2px;
             width: 20px;
             height: 20px;
         }
@@ -30,8 +32,8 @@ input {
         &:checked:before {
             background-image: url(./img/check.png);
             background-size: 23px;
-            margin-top: -5px;
-            margin-left: -4px;
+            left: -3px;
+            top: -3px;
         }
     }
 
@@ -47,16 +49,19 @@ input {
         &:before {box-sizing: border-box;
             content: '';
             background: url(./img/rbutton-empty.svg) 0 no-repeat;
-            background-size: 18px;
-            margin-top: -4px;
-            margin-left: -3px;
+            background-size: 16px;
+            left: -1px;
+            top: -1px;
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 17px;
+            height: 17px;
         }
 
         &:checked:before {
             background: url(./img/rbutton1.svg) 0 no-repeat;
+            left: -1px;
+            top: -1px;
+            background-size: 16px;
         }
     }
 }
