--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -22,6 +22,7 @@ input:not([class*=tf_form]) {
     background-color: #ffffff;
     border: 1px solid #999;
     border: 1px solid rgba(0, 0, 0, 0.3);
+}
 .modal.fade {
     -webkit-transition: opacity .3s linear, top .3s ease-out;
     -moz-transition: opacity .3s linear, top .3s ease-out;
