--- a/src/App/components/SetPicker/scss/set-picker.scss
+++ b/src/App/components/SetPicker/scss/set-picker.scss
@@ -143,7 +143,7 @@
 @keyframes s3 {
     100% {transform: rotate(1turn)}
 }
-.unselect {
+.unselect-all {
     color: #a00;
     box-shadow: 0px 0px 0px 1px #a00;
     width: 11px;
@@ -155,6 +155,12 @@
     font-size: 12px;
     cursor: pointer;
     opacity: .5;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
 
     &:hover {
         opacity: 1;
