--- a/src/App/widgets/MovablePopup/scss/movable-popup.scss
+++ b/src/App/widgets/MovablePopup/scss/movable-popup.scss
@@ -29,15 +29,16 @@
         box-sizing: border-box;
 
         .movable-popup-header-text {
-
+            font-size: 14px;
         }
 
         .movable-popup-header-question {
             background: #888;
             margin-left: 10px;
-            padding: 1px 10px;
+            padding: 1px 8px;
             border-radius: 10px;
             cursor: pointer;
+            font-size: 12px;
         }
 
         .movable-popup-header-close {
@@ -49,35 +50,15 @@
             cursor: pointer;
             z-index: 1000;
             background: #222f3f;
+            opacity: .5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
             &:hover {
-                &:before,
-                &:after {
                     opacity: 1;
                 }
             }
-
-            &:before,
-            &:after {
-                content: "";
-                position: absolute;
-                top: 12px;
-                width: 13px;
-                height: 2px;
-                box-shadow: 0px 2px 0px 0px #fff;
-                opacity: .5;
-            }
-
-            &:before {
-                left: 9px;
-                transform: rotate(45deg);
-            }
-
-            &:after {
-                left: 6px;
-                transform: rotate(-45deg);
-            }
-        }
     }
 
     .movable-popup-body {
@@ -86,7 +67,7 @@
 
     .movable-popup-corner {
         border: 8px solid transparent;
-        cursor: move;
+        cursor: se-resize;
         opacity: .3;
         position: absolute;
         transform: rotate(45deg);
